# lifeforce

./: .env.example  .gitignore  Askama.toml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.sh  dev.sh  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
.claude/: settings.local.json
migrations/: 001_initial_schema.sql
src/: main.rs
src/models/: mod.rs
src/routes/: mod.rs  welcome.rs
src/templates/: mod.rs
static/css/: input.css  sidebar.css  topnav.css
static/js/: sidebar.js
templates/: base.html  overview.html  welcome.html
templates/components/: dropdown-base.html  dropdown-health.html  dropdown-money.html  dropdown-time.html  sidebar.html  top-nav.html
