[package]
name = "lifeforce"
version = "0.1.0"
edition = "2021"
authors = ["Justin"]
description = "A personal finance and budget tracker"

[dependencies]
# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
tokio = { version = "1", features = ["full"] }

# Template engine
askama = "0.14"
# askama_axum is no longer needed in Askama 0.14+

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "rust_decimal", "json", "uuid"] }

# Utility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
rust_decimal = { version = "1.32", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"

[dev-dependencies]
axum-test = "14.0"